--- a/index6.html
+++ b/index6.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Musicians and Bands Gif</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="assets6/css6/style6.css" rel="stylesheet">
+			<title>Musicians and Bands Gif</title>
 </head>
 <body>
 	<div class = 'container'>
@@ -16,7 +18,7 @@
 			<div class = 'display'></div>
 		</div>
 		<div class = 'col-lg-3'>
-			<form id = 'TV-form'>
+			<form id = 'Music-form'>
 				<label for = 'newInput'>Favorite Musician or Band</label>
 				<input type ='text' id = 'newArtistInput'><br>
 				<input id = 'addArtist' type = 'submit' value = 'Submit'>
