--- a/index6.html
+++ b/index6.html
@@ -4,8 +4,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Rock+Salt" rel="stylesheet">
 	<link href="assets6/css6/style6.css" rel="stylesheet">
-			<title>Musicians and Bands Gif</title>
+			<title>Musicians Gif</title>
 </head>
 <body>
 	<div class = 'container'>
@@ -19,7 +20,8 @@
 		</div>
 		<div class = 'col-lg-3'>
 			<form id = 'Music-form'>
-				<label for = 'newInput'>Favorite Musician or Band</label>
+				<label for = 'newInput'>Been A Long Time Since We Rocked and Rolled: 
+				<br>Choose Your Favorite Musician</label>
 				<input type ='text' id = 'newArtistInput'><br>
 				<input id = 'addArtist' type = 'submit' value = 'Submit'>
 			</form>
